Entrega final. Textos informativos a cliente y precios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-
+    <p>Comisión 37445 </p>
+    <div>
+    <img src="https://www.coderhouse.com.co/imgs/ch.svg" alt="Logo Coder House">
+    </div>
 </body>
 
 </html>
